Fixed bug #17873: confusing error message when IGNORE/USE/FORCE INDEX refers to a column name.